--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,7 +28,7 @@
 
 *,
 *::before,
-*::after  {
+*::after {
   box-sizing: border-box;
 }
 
@@ -47,7 +47,7 @@ body {
   line-height: 30px;
   font-weight: 400;
   color: #444444;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .visually-hidden {
@@ -105,13 +105,13 @@ body {
   grid-template-columns: 517px 1fr;
   gap: 29px 26px;
   padding: 20px 60px 0 60px;
-  background-image: linear-gradient( to bottom, #ffffff 19%, #FFE17F 19%, #ffe17f 77%);
+  background-image: linear-gradient( to bottom, #ffffff 19%, #ffe17f 19%, #ffe17f 77%);
 }
 
 .header-container-inner {
   padding: 20px 60px 14px 60px;
   margin-bottom: 35px;
-  background-image: linear-gradient( to bottom, #ffffff 17.5%, #FFE17F 17.5%, #ffe17f 77%);
+  background-image: linear-gradient( to bottom, #ffffff 17.5%, #ffe17f 17.5%, #ffe17f 77%);
 }
 
 .logo {
@@ -125,7 +125,7 @@ body {
 }
 
 .logo:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .logo:active {
@@ -155,7 +155,7 @@ body {
 }
 
 .search-input:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .search-input:disabled {
@@ -178,11 +178,11 @@ body {
 
 .search-button:hover {
   background-color: #000000;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .search-button:focus {
-  outline: 1px solid #AF4FFF;
+  outline: 1px solid #af4fff;
 }
 
 .search-button:active {
@@ -218,13 +218,12 @@ body {
   text-decoration: none;
 }
 
-
 .personal-link:hover, .navigation-menu-link:not(.has-submenu-link):hover {
   opacity: 0.6;
 }
 
 .personal-link:focus, .navigation-menu-link:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .personal-link:active, .navigation-menu-link:not(.has-submenu-link):active {
@@ -234,7 +233,10 @@ body {
 
 .personal-login {
   margin-right: auto;
+}
 
+.personal-basket:hover .popover-cart {
+  display: block;
 }
 
 .login-link {
@@ -293,7 +295,7 @@ body {
   right: -77px;
   width: 320px;
   min-height: 173px;
-  z-index: 6;
+  z-index: 19;
   color: #ffffff;
   background-color: #000000;
 }
@@ -339,7 +341,7 @@ body {
   display: flex;
   margin-right: auto;
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
   font-family: "Rubik", sans-serif;
   line-height: 20px;
 }
@@ -375,7 +377,7 @@ body {
   padding: 0;
   width: 10px;
   height: 10px;
-  background-image: url(../images/modal/cross.svg);
+  background-image: url("../images/modal/cross.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-color: transparent;
@@ -454,6 +456,7 @@ body {
 
 .navigation-menu {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 44px;
   margin: 0;
@@ -463,7 +466,7 @@ body {
 }
 
 .personal-link:focus, .navigation-menu-link:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .navigation-menu-link {
@@ -506,8 +509,8 @@ body {
 }
 
 .navigation-menu-item-button::before {
-  position: absolute;
   content: "";
+  position: absolute;
   top: 50%;
   left: 50%;
   width: 2px;
@@ -517,8 +520,8 @@ body {
 }
 
 .navigation-menu-item-button::after {
-  position: absolute;
   content: "";
+  position: absolute;
   top: 50%;
   left: 50%;
   width: 2px;
@@ -553,7 +556,7 @@ body {
   height: 162px;
   margin: 0;
   list-style: none;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .has-submenu-link:hover + .navigation-menu-item-button {
@@ -601,7 +604,7 @@ body {
 }
 
 .submenu-link:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .submenu-link:active {
@@ -620,18 +623,19 @@ body {
 
 /* Main */
 
- .main-container {
+.main-container {
   flex-grow: 1;
 }
 
 /* Slider */
 
 .slider {
-  margin-bottom: 67px;
+  margin-bottom: 60px;
 }
 
 .slider-container {
-  background-image: linear-gradient( to bottom, #FFE17F 24%, #ffffff 24%);
+  position: relative;
+  background-image: linear-gradient( to bottom, #ffe17f 24%, #ffffff 24%);
 }
 
 .slider-list {
@@ -689,7 +693,7 @@ body {
 }
 
 .slider-button:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .slider-button:active {
@@ -715,13 +719,13 @@ body {
 }
 
 .slider-description-wrapper::before {
-  position: absolute;
   content: "";
+  position: absolute;
   width: 250px;
   height: 135px;
   top: 60px;
   right: 49px;
-  color: #FFFFFF;
+  color: #ffffff;
   text-align: right;
   font-family: "Rubik", sans-serif;
   font-size: 180px;
@@ -753,15 +757,15 @@ body {
 }
 
 .slider-link:hover {
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .slider-link:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .slider-link:active {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .slider-link::before {
@@ -773,11 +777,11 @@ body {
   top: 50%;
   transform: translateY(-50%);
   right: 0;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .slider-link:active::before {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .slider-link:disabled {
@@ -790,9 +794,11 @@ body {
 
 .slider-info {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   margin: 0;
   margin-top: auto;
+  margin-bottom: 26px;
   padding: 0;
   list-style: none;
 
@@ -816,8 +822,10 @@ body {
 
 .slider-pagination {
   display: flex;
-  margin-top: -37px;
-  margin-left: -39px;
+  position: absolute;
+  margin: 0;
+  left: 43.3%;
+  bottom: 6px;
   list-style: none;
   justify-content: center;
   gap: 20px;
@@ -829,7 +837,7 @@ body {
   height: 12px;
   border-radius: 50%;
   border: 2PX solid #000000;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   cursor: pointer;
 }
 
@@ -842,7 +850,7 @@ body {
 }
 
 .slider-pagination-button:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .slider-pagination-button:active {
@@ -886,17 +894,17 @@ body {
   width: 160px;
   height: 160px;
   margin-bottom: 32px;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .catalog-main-link:hover::before {
-  background-color: #FFC700;
+  background-color: #ffc700;
 }
 
 .catalog-main-link:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .catalog-main-item:active {
@@ -933,8 +941,8 @@ body {
   padding-top: 13px;
   padding-bottom: 70px;
   margin-bottom: 70px;
-  background-color: #F0F0F0;
-  background-image: linear-gradient( to bottom, #FFFFFF 29%, #F0F0F0 29%);
+  background-color: #f0f0f0;
+  background-image: linear-gradient( to bottom, #ffffff 29%, #f0f0f0 29%);
 }
 
 .services-container {
@@ -955,8 +963,8 @@ body {
 }
 
 .services-list::after {
-  position: absolute;
   content: "";
+  position: absolute;
   width: 7px;
   height: 319px;
   left: 280px;
@@ -968,7 +976,7 @@ body {
 }
 
 .services-active {
-  color: #FFE17F;
+  color: #ffe17f;
   background-color: #000000;
 }
 
@@ -984,7 +992,7 @@ body {
   letter-spacing: 3.6px;
   color: #000000;
   text-align: center;
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
   text-transform: uppercase;
   border: none;
 }
@@ -998,24 +1006,24 @@ body {
   top: 50%;
   transform: translateY(-50%);
   right: 0;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .services-button:not(.services-button-active):hover {
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .services-button:not(.services-button-active):focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .services-button:not(.services-button-active):active {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .services-button-active {
   background-color: #000000;
-  color: #FFE17F;
+  color: #ffe17f;
 }
 
 .services-button-active:hover {
@@ -1024,7 +1032,7 @@ body {
 
 .services-button-active:focus {
   padding-left: 35px;
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .services-button-active:active {
@@ -1091,7 +1099,7 @@ body {
   text-transform: uppercase;
   color: #000000;
   text-align: center;
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
   border: none;
   cursor: pointer;
 }
@@ -1103,7 +1111,7 @@ body {
   left: 0;
   width: 125px;
   height: 100px;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
   background-image: url("../images/index/car.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -1117,7 +1125,7 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #DCDCDC;
+  background-color: #dcdcdc;
   background-image: url("../images/index/i.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -1125,7 +1133,7 @@ body {
 }
 
 .delivery-button:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .delivery-button:active {
@@ -1133,7 +1141,7 @@ body {
 }
 
 .delivery-button:hover::before {
-  background-color: #FFC700;
+  background-color: #ffc700;
 }
 
 .delivery-button:hover::after {
@@ -1141,7 +1149,7 @@ body {
 }
 
 .delivery-button:focus::before {
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 /* Information */
@@ -1168,8 +1176,8 @@ body {
 }
 
 .about-title::before {
-  position: absolute;
   content: "";
+  position: absolute;
   top: 2px;
   width: 84px;
   height: 7px;
@@ -1211,7 +1219,7 @@ body {
 }
 
 .about-link:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .about-link {
@@ -1239,15 +1247,15 @@ body {
 }
 
 .about-detail:hover {
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .about-detail:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .about-detail:active {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .about-detail::before {
@@ -1259,11 +1267,11 @@ body {
   top: 50%;
   transform: translateY(-50%);
   right: 0;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .about-detail:active::before {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .about-detail:disabled {
@@ -1289,8 +1297,8 @@ body {
 }
 
 .contacts-title::before {
-  position: absolute;
   content: "";
+  position: absolute;
   top: 2px;
   width: 84px;
   height: 7px;
@@ -1347,15 +1355,15 @@ body {
 }
 
 .contacts-letter:hover {
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .contacts-letter:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .contacts-letter:active {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .contacts-letter::before {
@@ -1367,11 +1375,11 @@ body {
   top: 50%;
   transform: translateY(-50%);
   right: 0;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .contacts-letter:active::before {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .contacts-letter-detail:disabled {
@@ -1385,7 +1393,7 @@ body {
 /* Subscribe */
 
 .subscribe {
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
 }
 
 .subscribe-container {
@@ -1395,7 +1403,7 @@ body {
   padding-bottom: 52px;
 }
 
-.subscribe-title  {
+.subscribe-title {
   width: 348px;
   margin: 0;
   margin-bottom: 144px;
@@ -1422,7 +1430,7 @@ body {
   line-height: 30px;
   padding: 11px 16px;
   border: none;
-  border-bottom: 3px solid #C4C4C4;
+  border-bottom: 3px solid #c4c4c4;
   color: #444444;
   background-color: transparent;
   opacity: 0.5;
@@ -1438,7 +1446,7 @@ body {
 }
 
 .subscribe-input:active {
-    color: #000000;
+  color: #000000;
 }
 
 .subscribe-button {
@@ -1450,18 +1458,18 @@ body {
   line-height: normal;
   letter-spacing: 3.6px;
   text-transform: uppercase;
-  border: 3px solid #C4C4C4;
+  border: 3px solid #c4c4c4;
   color: #000000;
   cursor: pointer;
 }
 
 .subscribe-button:hover {
   background-color: #000000;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .subscribe-button:focus {
-  outline: 1px solid #AF4FFF;
+  outline: 1px solid #af4fff;
 }
 
 .subscribe-button:active {
@@ -1484,7 +1492,7 @@ body {
 
 .subscribe-note::before {
   content: "";
-  background-image: url(../images/index/tick-big.svg);
+  background-image: url("../images/index/tick-big.svg");
   background-repeat: no-repeat;
   width: 16px;
   height: 16px;
@@ -1494,7 +1502,7 @@ body {
 
 .page-footer {
   background-color: #444444;
-  color: #FFFFFF;
+  color: #ffffff;
   padding: 62px 0;
 }
 
@@ -1505,7 +1513,7 @@ body {
 .footer-logo-wrapper {
   width: 239px;
   margin-right: auto;
-  }
+}
 
 .footer-logo-wrapper .logo {
   display: block;
@@ -1562,7 +1570,7 @@ body {
   line-height: normal;
   letter-spacing: 3.6px;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -1576,7 +1584,7 @@ body {
 }
 
 .footer-menu-link:focus, .footer-contacts-phone:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
 
@@ -1586,8 +1594,8 @@ body {
 }
 
 .footer-menu-link::before {
-  position: absolute;
   content: "";
+  position: absolute;
   left: 0;
   bottom: -6px;
   width: 0;
@@ -1671,7 +1679,7 @@ body {
   font-size: 16px;
   line-height: 20px;
   text-decoration-line: underline;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .htmlacademy-link {
@@ -1684,7 +1692,7 @@ body {
 }
 
 .htmlacademy-link:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .htmlacademy-link:active {
@@ -1747,7 +1755,7 @@ body {
 }
 
 .breadcrumbs-link:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .breadcrumbs-link:active {
@@ -1757,7 +1765,7 @@ body {
 /* Catalog-products */
 
 .catalog-products {
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
 }
 
 .catalog-products-container {
@@ -1806,8 +1814,8 @@ body {
 }
 
 .legend-name::before {
-  position: absolute;
   content: "";
+  position: absolute;
   top: -2px;
   left: 0;
   display: block;
@@ -1825,8 +1833,8 @@ body {
 }
 
 .bluetooth-title::before {
-  position: absolute;
   content: "";
+  position: absolute;
   top: -5px;
 }
 
@@ -1850,7 +1858,7 @@ body {
   height: 18px;
   border-radius: 50%;
   border: 2px solid #000000;
-  background-color: #EBEBEB;
+  background-color: #ebebeb;
   cursor: pointer;
 }
 
@@ -1903,7 +1911,7 @@ body {
   opacity: 0.3;
   background-color: transparent;
   border: none;
-  appearance: textfield;
+  -moz-appearance: textfield;
 }
 
 .input-price-up {
@@ -1963,7 +1971,7 @@ body {
   top: 0;
   width: 18px;
   height: 18px;
-  background-image: url(../images/catalog/tick.svg);
+  background-image: url("../images/catalog/tick.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -1999,15 +2007,15 @@ body {
 }
 
 .button-submit:hover {
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .button-submit:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .button-submit:active {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .button-submit::before {
@@ -2019,11 +2027,11 @@ body {
   top: 50%;
   transform: translateY(-50%);
   right: 0;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .button-submit:active::before {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .button-submit:disabled {
@@ -2066,7 +2074,7 @@ body {
   color: #000000;
   border: none;
   background-color: transparent;
-  background-image: url(../images/catalog/select.svg);
+  background-image: url("../images/catalog/select.svg");
   background-repeat: no-repeat;
   background-position-y: center;
   background-position-x: right;
@@ -2078,7 +2086,7 @@ body {
 }
 
 .select-control:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .select-control:active {
@@ -2111,7 +2119,7 @@ body {
 }
 
 .sorting-link:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .sorting-link:active {
@@ -2246,7 +2254,7 @@ body {
   height: 60px;
   top: 27px;
   right: 27px;
-  background: url(../images/catalog/new.svg);
+  background: url("../images/catalog/new.svg");
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 50%;
@@ -2294,7 +2302,7 @@ body {
   padding: 15px 25px;
   padding-right: 20px;
   list-style: none;
-  background-color: #EBEBEB;
+  background-color: #ebebeb;
 }
 
 .catalog-pagination-item {
@@ -2352,7 +2360,7 @@ body {
 }
 
 .catalog-pagination-name:not(.pagination-disabled):hover {
-  background-color: #DCDCDC;
+  background-color: #dcdcdc;
 }
 
 .catalog-pagination-name:focus {
@@ -2361,7 +2369,7 @@ body {
 }
 
 .catalog-pagination-name:active {
-  background-color: #DCDCDC;
+  background-color: #dcdcdc;
   opacity: 0.3;
 }
 
@@ -2408,8 +2416,8 @@ body {
 }
 
 .modal-close-button {
-  position: absolute;
   content: "";
+  position: absolute;
   top: 73px;
   right: 70px;
   width: 26px;
@@ -2472,7 +2480,7 @@ body {
 }
 
 .modal-error {
-  color: #FF3D3D;
+  color: #ff3d3d;
 }
 
 .modal-label-tooltip {
@@ -2520,7 +2528,7 @@ body {
 }
 
 .modal-input-name-invalid {
-  outline: 2px solid #FF3D3D;
+  outline: 2px solid #ff3d3d;
   outline-offset: -1px;
 }
 
@@ -2543,7 +2551,7 @@ body {
   background-image: url("../images/modal/modal-tooltip.svg");
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
   cursor: pointer;
 }
 
@@ -2568,8 +2576,8 @@ body {
 }
 
 .tooltip-text::before {
-  position: absolute;
   content: "";
+  position: absolute;
   top: -6px;
   right: 40px;
   width: 14px;
@@ -2597,8 +2605,8 @@ body {
 }
 
 .quantity-button::before {
-  position: absolute;
   content: "";
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -2608,8 +2616,8 @@ body {
 }
 
 .max-button::after {
-  position: absolute;
   content: "";
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(90deg);
@@ -2663,7 +2671,7 @@ body {
 }
 
 .send-button {
-  width: 220px;
+  width: 206px;
   padding-left: 0;
   background-color: transparent;
   border: none;
@@ -2671,15 +2679,15 @@ body {
 }
 
 .send-button:hover {
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .send-button:focus {
-  outline: 2px solid #AF4FFF;
+  outline: 2px solid #af4fff;
 }
 
 .send-button:active {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .send-button::before {
@@ -2691,11 +2699,11 @@ body {
   top: 50%;
   transform: translateY(-50%);
   right: 0;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .send-button:active::before {
-  background-color: #FFCC33;
+  background-color: #ffcc33;
 }
 
 .send-button:disabled {
