--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2191,7 +2191,7 @@ body {
   left: 50%;
   width: 220px;
   z-index: 2;
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 800;
